<resources>
    <string name="app_name">Shopping</string>
    <string name="winkels">Winkels</string>
    <string name="artikels">Artikels</string>
    <string name="shopping">Shopping</string>
    <string name="title_activity_a4_list">A4ListActivity</string>
    <string name="title_activity_a4_shoppinglist">A4ShoppingListActivity</string>
    <string name="title_activity_new_item">NewItemActivity</string>
    <string name="title_activity_add_meal_combins">Koppel gerecht aan ...</string>
    <string name="title_backup_to_external">BackupToExternal</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="contentdescription">TODO</string>
    <string name="placeholder">placeholder</string>
    <string name="instuctionNewItem">Vul gegevens in en druk op TOEVOEGEN</string>
    <string name="labelName">Naam</string>
    <string name="label_preferred_shop">Voorkeur winkel:</string>
    <string name="labelToBuyCheckBox">Kopen</string>
    <string name="labelToevoegen">Toevoegen</string>
    <string name="string_name">Naam</string>
    <string name="name">Naam</string>
    <string name="instructionShopToevoegen">Vul de naam in van de nieuwe shop en druk op Toevoegen</string>
    <string name="updatebutton">Aanpassen</string>
    <string name="checkbox">CheckBox</string>
    <string name="actief">Actief</string>
    <string name="winkel_toevoegen">Winkel Toevoegen</string>
    <string name="add_shop_to_product"><![CDATA[<<]]></string>
    <string name="remove_shop_from_product"><![CDATA[>>]]></string>
    <string name="label_winkel">Winkel:</string>

    <!--  Bluetooth -->
    <string name="title_bluetooth_services">Bluetooth Services</string>
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to </string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="text_send_button">Send</string>
    <string name="text_stop_button">End</string>
    <string name="text_accept_button">Accept</string>
    <string name="scanTextButton">Scan</string>
    <string name="gerechten_label">Gerechten</string>
    <string name="sms_status_label">Sms Status</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>