<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="be.hvwebsites.winkelen.BluetoothCom">

    <ListView
        android:id="@+id/in"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll"
        app:layout_constraintBottom_toTopOf="@+id/btStatusBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonScan"
        android:layout_width="74dp"
        android:layout_height="0dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginBottom="16dp"
        android:text="@string/scanTextButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="74dp"
        android:layout_height="0dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:text="@string/text_send_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonScan"
        app:layout_constraintStart_toEndOf="@+id/buttonScan" />

    <Button
        android:id="@+id/buttonStop"
        android:layout_width="65dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/text_stop_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonSend"
        app:layout_constraintStart_toEndOf="@+id/buttonSend" />

    <Button
        android:id="@+id/buttonAcceptBtData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:text="@string/text_accept_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonStop"
        app:layout_constraintStart_toEndOf="@+id/buttonStop" />

    <TextView
        android:id="@+id/btStatusBar"
        android:layout_width="311dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/actief"
        app:layout_constraintBottom_toTopOf="@+id/buttonSend"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>